- Added ImageURL function - Problems with CORS/Authentication
